# Ghost-Phisher

Settings/: ghost_settings.db
gui/: font_settings.py  ghost_phisher.py
scapy/: setup.cfg  setup.py
scapy/scapy.egg-info/: PKG-INFO
threaded/: __init__.py  _asynciotask.pxd  _asynciotask.py  _asynciotask.pyx  _base_threaded.py  _threaded.pxd  _threaded.py  _threaded.pyx  _threadpooled.py  _version.py  class_decorator.py  class_decorator.pyx
