[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[sdist]
formats = gztar
owner = root
group = root

[coverage:run]
concurrency = multiprocessing
omit = 
	scapy/tools/UTscapy.py
	test/*
	scapy/modules/six.py
	scapy/libs/winpcapy.py
	scapy/libs/ethertypes.py
	.tox/*
	/private/*

[egg_info]
tag_build = 
tag_date = 0

